Refactor RepositoryFile and SupportedRecordingFile to introduce isAdditionalFile method and improve file handling logic